feat: add emi translations